syntax = "proto3";
import "core.proto";

package core;

message DataAppReq {
    bytes               AppEUI      = 1;
    bytes               DevEUI      = 2;
    uint32              FPort       = 10;
    uint32              FCnt        = 11;
    bytes               Payload     = 20;
    repeated Metadata   Metadata    = 30;
}

message DataAppRes {}

message JoinAppReq {
    bytes               AppEUI      = 1;
    bytes               DevEUI      = 2;
    repeated Metadata   Metadata    = 30;
}

message JoinAppRes {}

service App {
    rpc HandleData (DataAppReq) returns (DataAppRes);
    rpc HandleJoin (JoinAppReq) returns (JoinAppRes);
}
