syntax = "proto3";
import "lorawan.proto";
import "core.proto";

package core;

message DataBrokerReq {
    LoRaWANData         Payload     = 1;
    Metadata            Metadata    = 2;
}

message DataBrokerRes {
    LoRaWANData         Payload     = 1;
    Metadata            Metadata    = 2;
}

message JoinBrokerReq {
    bytes               AppEUI      = 1;
    bytes               DevEUI      = 2;
    bytes               DevNonce    = 3;
    bytes               MIC         = 4;
    Metadata            Metadata    = 5;
}

message JoinBrokerRes {
    LoRaWANJoinAccept   Payload     = 1;
    bytes               DevAddr     = 2;
    Metadata            Metadata    = 3;
}

service Broker {
    rpc HandleData              (DataBrokerReq)         returns (DataBrokerRes);
    rpc HandleJoin              (JoinBrokerReq)         returns (JoinBrokerRes);
}
